force-app/main/default/objects/Opportunity/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <label>Pod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>