force-app/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Confluent</fullName>
                </value>
                <value>
                    <fullName>Databricks</fullName>
                </value>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>