force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Governance Suite</fullName>
                </value>
                <value>
                    <fullName>Lakehouse Core</fullName>
                </value>
                <value>
                    <fullName>ModelServe</fullName>
                </value>
                <value>
                    <fullName>PipelineOps</fullName>
                </value>
                <value>
                    <fullName>StreamSync</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>